test/asm/label-scope.err
error: label-scope.asm(3):
    '@' not defined
error: label-scope.asm(3):
    '.' not defined
error: label-scope.asm(3):
    '..' not defined
error: label-scope.asm(12):
    Built-in symbol '@' cannot be purged
error: label-scope.asm(12):
    Built-in symbol '.' cannot be purged
error: label-scope.asm(12):
    Built-in symbol '..' cannot be purged
Assembly aborted with 6 errors!
